--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+html{
+  color: white;
+  font-size: 20px;
+  font-family: verdana;
+}
+
 body{
   background-image:url("../img/fondoPag.png");
   -webkit-background-size: cover;
@@ -8,29 +14,91 @@ body{
 
 .dado{
   background-image:url(https://i.pinimg.com/originals/0b/61/ba/0b61ba096406865f0e76a9b07e36dc69.png);
-  background-position:-803px;
-  width:157px;
-  height:156px;
+  background-position: -803px;
+  width: 157px;
+  height: 156px;
 
 }
 #contenedorDados{
-  display:flex;
-  width:315px;
-  margin:0 auto;
+  display: flex;
+  width: 315px;
+  margin: 0 auto;
 }
 
 #boton_Tirar{
-  display:block;
-  width:100px;
-  height:60px;
-  margin:10px auto;
-  background-color:#E3001B;
-  color:white;
-  font-size:20px;
-  font-family:consolas;
-  border:0;
-  border-radius:10px;
-  cursor:pointer;
+  display: block;
+  width: 100px;
+  height: 60px;
+  margin: 10px auto;
+  background-color: #E3001B;
+  color: white;
+  font-size: 20px;
+  font-family: consolas;
+  border: 0;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+#mensajeTexto{
+  position: absolute;
+  top: 30px;
+  left: 40px;
+  width: 255px;
+  height: 140px;
+}
+
+.show{
+  display: block;
+}
+
+.hidden{
+  display: none;
+}
+
+.ventanaAlerta{
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,.6);
+}
+
+.contenidoVentana{
+  position: relative;
+  background-color: #E6E9EE;
+  width: 350px;
+  height: 230px;
+  margin-right: auto;
+  margin-left: auto;
+  top: 50%;
+  margin-top: -115px;
+  border-radius: 5%;
+  text-align: center;
+  color: black;
+  font-family: verdana;
+  font-size: 18px;
+}
+
+.botonCerrar{
+  position: absolute;
+  background-color: #ff0000;
+  top: 10px;
+  right: 10px;
+  color: black;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 23px;
+  line-height: 34px;
+  font-family: verdana;
+}
+
+.botonCerrar:hover{
+  background-color: #ff6666;
+  color: white;
 }
 
 footer{
