--- a/css/credits.css
+++ b/css/credits.css
@@ -3,7 +3,7 @@ html{
 }
 
 body{
-  background-image:url("https://i.pinimg.com/originals/6a/d8/f5/6ad8f5ec58db94b8db22f34146842575.jpg");
+  background-image:url("https://i.imgur.com/QWxGKAF.png");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
